<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".gamestart">

    <Button
        android:id="@+id/startgame"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="100dp"
        android:background="#349FFD"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="251dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/startgame"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@mipmap/lego_bricks" />

    <Button
        android:id="@+id/option"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#FF4141"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/option"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/startgame"
        app:layout_constraintTop_toBottomOf="@+id/startgame" />

    <Button
        android:id="@+id/help"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#F6E54C"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/help"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/option"
        app:layout_constraintTop_toBottomOf="@+id/option" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_lego"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/startgame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>